--- a/template.html
+++ b/template.html
@@ -2,9 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title></title> 
+        <title>Dalton's Page</title> 
     </head>
     <body>
+        
 
     </body>
 </html>
