I added a paragraph of text to my website

--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
         <title>Dalton's Page</title> 
     </head>
     <body>
-        <h1>Dalton's Page</h>    
+        <h1>Dalton's Page</h1>    
+        <h3>Facts about my life and what I enjoy</h3>
+        
+        <p>I am a freshman at RIT in the computer exploration program. I have programed for only really one year. That experience is from AP Comp Sci, a class I enjoyed a lot. That class is why I decided to go into the computer exploration program.
+        I knew that I wanted to continue to program in my future - but I do not know what exactly I want to do in programming. Through this program I get to experience different types of computing. 
+        This class is actually an example on how I get to experience something new. I have had zero experience in html prior to making this homepage. Beyond computing I have a couple of hobbies such as...</p>
 
     </body>
 </html>
