--- a/index.html
+++ b/index.html
@@ -8,9 +8,28 @@
         <h1>Dalton's Page</h1>    
         <h3>Facts about my life and what I enjoy</h3>
         
+        <h3>Small text about my computing experience</h3>
         <p>I am a freshman at RIT in the computer exploration program. I have programed for only really one year. That experience is from AP Comp Sci, a class I enjoyed a lot. That class is why I decided to go into the computer exploration program.
         I knew that I wanted to continue to program in my future - but I do not know what exactly I want to do in programming. Through this program I get to experience different types of computing. 
         This class is actually an example on how I get to experience something new. I have had zero experience in html prior to making this homepage. Beyond computing I have a couple of hobbies such as...</p>
+
+        <h3>My Hobbies</h3>
+            <ul>
+                <li>Music
+                   <ul>
+                        <dl>
+                            <dt>Saxophone</dt>
+                                <dd>
+                                    <ul>
+                                        <li>Played for around 10 years</li>
+                                        <li>Was lead Alto in high school Jazz Band</li>
+                                        <li>Played in my the pit for my school's musical</li>
+                                    </ul>
+                                </dd>
+                        </dl>
+                    </ul>
+                </li>
+            </ul>
 
     </body>
 </html>
