I added a bit more to music and possibly finished it up

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Dalton's Page</h1>    
-        <h3>Facts about my life and what I enjoy</h3>
+        <h2>Facts about my life and what I enjoy</h2>
         
         <h3>Small text about my computing experience</h3>
         <p>I am a freshman at RIT in the computer exploration program. I have programed for only really one year. That experience is from AP Comp Sci, a class I enjoyed a lot. That class is why I decided to go into the computer exploration program.
@@ -22,8 +22,29 @@
                                 <dd>
                                     <ul>
                                         <li>Played for around 10 years</li>
+                                        <li>Started out playing the alto but I also have a soprano!</li>
                                         <li>Was lead Alto in high school Jazz Band</li>
                                         <li>Played in my the pit for my school's musical</li>
+                                        <li>Was in Concert Band (first chair)</li>
+                                        <li>I joined the Pep Band</li>
+                                        <li>I tried out for Jazz Band at RIT... but bombed</li>
+                                    </ul>
+                                </dd>
+                            <dt>Piano</dt>
+                                <dd>
+                                    <ul>
+                                        <li>I played piano for around 3 years</li>
+                                        <li>I forgot everything about it besides reading music</li>
+                                    </ul>
+                                </dd>
+                            <dt>Listening</dt>
+                                <dd>
+                                    <ul>
+                                        <li>I listen to a lot of genres</li>
+                                        <li>Currently one of my favorite bands is AJR</li>
+                                        <li>I enjoy a german group a lot (Von Wegen Lisbeth)</li>
+                                        <li>Some of my favorite music is all instrumental</li>
+                                            <ul><li>Search Europe Jazz Band on youtube for and example of a good instrumental piece</li></ul>
                                     </ul>
                                 </dd>
                         </dl>
