Finished sports and workign on video games part

--- a/index.html
+++ b/index.html
@@ -45,8 +45,70 @@
                                         <li>I enjoy a german group a lot (Von Wegen Lisbeth)</li>
                                         <li>Some of my favorite music is all instrumental</li>
                                             <ul><li>Search Europe Jazz Band on youtube for and example of a good instrumental piece</li></ul>
+                                        <li>I will listen to most types of music depending on my mood</li>
                                     </ul>
                                 </dd>
+                        </dl>
+                    </ul>
+                </li>
+                <li>Athletics
+                    <ul>
+                        <dl>
+                            <dt>Squash
+                                <dd>
+                                    <ul>
+                                        <li>This is one of the most recent sports I got into</li>
+                                        <li>I started playing my freshman year of high school</li>
+                                        <li>Originally I really enjoyed it, then grew to hate it and am now back to loving it</li>
+                                        <li>I'm really hopeful for the gym/courts to open up on campus so I can play!</li>
+                                    </ul>
+                                <dd>
+                            </dt>
+                            <dt>Lacrosse
+                                <dd>
+                                    <ul>
+                                        <li>I have played this sport for most of my life</li>
+                                        <li>First started at midfield, then transitioned to an LSM</li>
+                                        <li>Settled on goalie for my position</li>
+                                        <li>I eventually got very good at playing goalie, but became burnt out by the time I got to RIT</li>
+                                        <li>I want to help the team at RIT but not nescessarly play</li>    
+                                    </ul>
+                                </dd>
+                            </dt>
+                            <dt>Others
+                                <dd>
+                                    <ul>
+                                        <li>I played soccer early on and picked it again up for a year in high school</li>
+                                        <li>I swam for a while but never enjoyed it so stopped after starting middle school</li>
+                                    </ul>
+                                </dd>
+                            </dt>
+                            
+                        </dl>
+                    </ul>
+                </li>
+                <li>Video Games
+                    <ul>
+                        <dl>
+                            <dt>Rocket League
+                                <dd>
+                                    <ul>
+                                        <li>My favorite game</li>
+                                        <li>I have had this game since it first came out (opening week I think)</li>
+                                        <li>Im not terrible at the game (top 10-15 percent in One on One's)
+                                        <li>The game is going free to play soon, contact me if you want to play</li>
+                                    </ul>
+                                </dd>
+                            </dt>
+                            <dt>Other Favorites
+                                <dd>
+                                    <ul>
+                                        <li>Destiny is my most played game</li>
+                                        <li>Minecraft is a childhood classic</li>
+                                        <li>
+                                    </ul>
+                                </dd>
+                            </dt>
                         </dl>
                     </ul>
                 </li>
