the text is done I think, will probably add more later but now I will try to add a picture

--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@
                                     <ul>
                                         <li>Destiny is my most played game</li>
                                         <li>Minecraft is a childhood classic</li>
-                                        <li>
+                                        <li>CSGO is an oldie that I dont play enough</li>
+                                        <li>Skyrim is my favorite game to mod</li>
+                                        <li>NOT A FAN of LoL</li>
                                     </ul>
                                 </dd>
                             </dt>
@@ -113,6 +115,9 @@
                     </ul>
                 </li>
             </ul>
+
+            <p>If I have any hobbies or interests that you share please contact me!. Im always willing to talk or hangout if you want to. Just reach out to me. My contact information is below</p>
+            <p>(I am not going to be putting my contact info here yet besides email) email: drf8481@rit.edu</p>
 
     </body>
 </html>
