--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         I knew that I wanted to continue to program in my future - but I do not know what exactly I want to do in programming. Through this program I get to experience different types of computing. 
         This class is actually an example on how I get to experience something new. I have had zero experience in html prior to making this homepage. Beyond computing I have a couple of hobbies such as...</p>
 
+        <img src="C:\Users\dalto\WebMediaOne\hmPageCreation\WM-HomepageCreation\SampleCodeBelayApp.jpg" alt="Just code in an image"/>
+
         <h3>My Hobbies</h3>
             <ul>
                 <li>Music
