trying to link to the validated page

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
         <img src="https://th.bing.com/th/id/OIP.PPSDhaIp3Zst1YOuRB92iwHaHa?w=187&h=187&c=7&o=5&pid=1.7" alt="Cool lego guy playing the sax"/>
 
+        <a>homework\notvalid.htmlv</a>
+
         <h3>My Hobbies</h3>
             <ul>
                 <li>Music
@@ -109,7 +111,7 @@
                 </li>
             </ul>
 
-            <p>Beyond those hobbies, I also have pets and enjoy movies. My family owns three dogs and technically own a cat too. Two of my families dogs are Eurasires. 
+            <p> Beyond those hobbies, I also have pets and enjoy movies. My family owns three dogs and technically own a cat too. Two of my families dogs are Eurasires. 
             These dogs are fluffy with curly tails and pointy tails; think about sammies (the big white fluffy dogs) but instead of white kinda buff. The other dog is a bernie's mountain dogs. 
             She is very nice but very stupid as well. Our cat only sometimes hangs around in my house so I do not really enjoy him. 
             I hope that the next cat I get enjoys cuddling because those are the best types of cats. On the topic of movies, I reallyed enjoyed the Harry Potter series. 
