changed the description of the link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <img src="https://th.bing.com/th/id/OIP.PPSDhaIp3Zst1YOuRB92iwHaHa?w=187&h=187&c=7&o=5&pid=1.7" alt="Cool lego guy playing the sax"/>
 
-        <a href="homework/notvalid.html">this is stuff</a>
+        <a href="homework/notvalid.html">link to the validated page</a>
 
         <h3>My Hobbies</h3>
             <ul>
