added a go back button

--- a/homework/validated.html
+++ b/homework/validated.html
@@ -8,5 +8,7 @@
             <div id="title_card">
                 <h2>Another Headline</h2>
                 <p>Paragraphing away</p>  
+
+                <a href="..\index.html">takes you back to the main page</a>
             </div>        
     </body>
