--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         I knew that I wanted to continue to program in my future - but I do not know what exactly I want to do in programming. Through this program I get to experience different types of computing. 
         This class is actually an example on how I get to experience something new. I have had zero experience in html prior to making this homepage. Beyond computing I have a couple of hobbies such as...</p>
 
+        <img src= "assets/pictures/me.jpg" alt="Picture of me" width=500/>
         <img src="https://th.bing.com/th/id/OIP.PPSDhaIp3Zst1YOuRB92iwHaHa?w=187&h=187&c=7&o=5&pid=1.7" alt="Cool lego guy playing the sax"/>
 
         <a href="homework/validated.html">link to the validated page</a>
