added the final pictures and validates

--- a/index.html
+++ b/index.html
@@ -5,21 +5,30 @@
         <title>Dalton's Page</title> 
     </head>
     <body>
-        <h1>Dalton's Page</h1>    
+        <h1>Dalton's Page</h1> 
+
+        <img src= "assets/pictures/me.jpg" alt="Picture of me" width="500" />
+
         <h2>Facts about my life and what I enjoy</h2>
         
         <h3>Small text about my computing experience</h3>
-        <p>I am a freshman at RIT in the computer exploration program. I have programed for only really one year. That experience is from AP Comp Sci, a class I enjoyed a lot. That class is why I decided to go into the computer exploration program.
-        I knew that I wanted to continue to program in my future - but I do not know what exactly I want to do in programming. Through this program I get to experience different types of computing. 
-        This class is actually an example on how I get to experience something new. I have had zero experience in html prior to making this homepage. Beyond computing I have a couple of hobbies such as...</p>
+        <p>I am a freshman at RIT in the computer exploration program. I have programed for only really one year. That experience is from AP Comp Sci, a class I enjoyed a lot and from learning 
+        how to use android studio to start working on a passion project of mine. 
+        That class is why I decided to go into the computer exploration program.
+        I knew that I wanted to continue to program in my future - but I do not know what exactly I want to do in programming. 
+        Through this program I get to experience different types of computing. 
+        This class is actually an example on how I get to experience something new. I have had zero experience in html prior to making this homepage. </p>
 
-        <img src= "assets/pictures/me.jpg" alt="Picture of me" width=500/>
+        <img src="assets/pictures/AndroidStudio.gif" alt="Android Studio logo"/>
+
         <img src="https://th.bing.com/th/id/OIP.PPSDhaIp3Zst1YOuRB92iwHaHa?w=187&h=187&c=7&o=5&pid=1.7" alt="Cool lego guy playing the sax"/>
+        <p>The cool lego guy might be copy righted but I'm not sure so its here still</p>
 
         <a href="homework/validated.html">link to the validated page</a>
         <h3>Hobbies Page</h3>
         <a href="personal/hobbies.html">link to view my hobbies</a>
 
+        <img src="assets/pictures/nora.svg" alt="My cute fluffy dog Nora" width="200" />
             <p> Beyond those hobbies, I also have pets and enjoy movies. My family owns three dogs and technically own a cat too. Two of my families dogs are Eurasires. 
             These dogs are fluffy with curly tails and pointy tails; think about sammies (the big white fluffy dogs) but instead of white kinda buff. The other dog is a bernie's mountain dogs. 
             She is very nice but very stupid as well. Our cat only sometimes hangs around in my house so I do not really enjoy him. 
